<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    android:background="@color/azulFondo">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="40dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/titulo"
            android:textColor="@color/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:elevation="50dp"
            android:text="@string/creacion_de_usuario"
            android:textSize="30sp" />
        <EditText
            android:id="@+id/campoNombre"
            android:layout_below="@id/titulo"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/nombre"
            android:drawablePadding="12dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/nombre_completo"
            android:background="@drawable/contenedor_campos"
            android:inputType="text"
            android:autofillHints="name" />


        <EditText
            android:id="@+id/campoCentro"
            android:layout_width="match_parent"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/colegio"
            android:layout_height="wrap_content"
            android:layout_below="@id/campoNombre"
            android:layout_marginTop="20dp"
            android:hint="@string/centro_docente"
            android:background="@drawable/contenedor_campos"
            android:inputType="text"
            android:autofillHints="school-name"/>

        <EditText
            android:id="@+id/campoCorreo"
            android:drawableStart="@drawable/correo"
            android:drawablePadding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/campoCentro"
            android:background="@drawable/contenedor_campos"
            android:layout_marginTop="20dp"
            android:hint="@string/correo_electronico"
            android:inputType="text"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/campoContrasena"
            android:layout_width="match_parent"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/pass"
            android:layout_height="wrap_content"
            android:background="@drawable/contenedor_campos"
            android:layout_below="@id/campoCorreo"
            android:layout_marginTop="20dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <EditText
            android:id="@+id/campoConfirmarContrasena"
            android:layout_width="match_parent"
            android:background="@drawable/contenedor_campos"
            android:drawablePadding="12dp"
            android:drawableStart="@drawable/repass"
            android:layout_height="wrap_content"
            android:layout_below="@id/campoContrasena"
            android:layout_marginTop="20dp"
            android:hint="@string/confirmar_contrasena"
            android:inputType="textPassword"
            android:autofillHints="password" />
        <CheckBox
            android:id="@+id/checkMostrarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mostrar_contrasena"
            android:checked="false"
            android:layout_below="@id/campoConfirmarContrasena"/>

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/fraseIniciarSesion"
            android:layout_marginTop="80dp"
            android:background="@drawable/botones"
            android:onClick="RegistrarUsuario"
            android:text="@string/registrarse"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/fraseIniciarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tienes_cuenta"
            android:textColorLink="#0E529E"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>