<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion"
    android:background="@color/azulFondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="40dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="375dp"
            android:layout_height="315dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_de_aplicacion"/>

        <EditText
            android:id="@+id/campoCorreo"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/logo"
            android:hint="@string/correo_electronico"
            android:inputType="text"
            android:drawableStart="@drawable/user"
            android:drawablePadding="12dp"
            android:background="@drawable/contenedor_campos"
            android:autofillHints="emailAddress"/>


        <EditText
            android:id="@+id/campoContrasena"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/campoCorreo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:drawableStart="@drawable/pass"
            android:drawablePadding="12dp"
            android:background="@drawable/contenedor_campos"
            android:autofillHints="password" />
        <CheckBox
            android:id="@+id/checkMostrarContrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/mostrar_contrasena"
            android:checked="false"
            android:layout_below="@id/campoContrasena"/>

        <Button
            android:id="@+id/botonLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkMostrarContrasena"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/botones"
            android:onClick="iniciarSesion"
            android:text="@string/iniciar_sesion"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/botonLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/botones"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:text="@string/registrarse"
            />


    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>