<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".principal"
    android:background="@color/azulFondo">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="40dp"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/bienvenido"
            android:textColor="@color/titulo"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/datoNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titulo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/titulo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/datoCentro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/datoNombre"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/titulo"
            android:textSize="20sp" />


        <Button

            android:id="@+id/botonConsulta"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/datoCentro"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/botones"
            android:onClick="consultarAlumnos"
            android:text="@string/consulta_alumnos"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/botonConsulta"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/botones"
            android:onClick="registroAlumnos"
            android:text="@string/registro_alumnos"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/botonCalificaciones"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/botonRegistro"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/botones"
            android:text="@string/calificaciones"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/botonAusencias"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/botonCalificaciones"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/botones"
            android:text="@string/ausencia"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/botonCalendario"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/botonAusencias"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/botones"
            android:text="@string/calendario"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/botonInforme"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/informe"
            android:paddingHorizontal="20dp"
            android:text="@string/generar_informe"
            android:layout_marginTop="30dp"
            android:layout_below="@id/botonCalendario"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/cerrarsession"
            android:onClick="cerrarSesion"
            android:paddingHorizontal="20dp"
            android:text="@string/cerrar_sesion"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>